# BirchEngine

./: CMakeLists.txt  README.md
BirchEngine/: CMakeLists.txt
BirchEngine/inc/: game.hh  map.hh  texture_manager.hh
BirchEngine/inc/ecs/: collider_component.hh  components.hh  keyboard_controller.hh  sprite_component.hh  tile_component.hh  transform_component.hh
BirchEngine/src/: Collision.cpp  Game.cpp  Map.cpp  TextureManager.cpp  Vector2D.cpp  collision.cc  game.cc  main.cc  main.cpp  map.cc  texture_manager.cc  vector2D.cc
BirchEngine/src/ecs/: ECS.cpp  collider_component.cc  ecs.cc  keyboard_controller.cc  sprite_component.cc  tile_component.cc  transform_component.cc
